<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_agenda">

    <fragment
        android:id="@+id/navigation_agenda"
        android:name="com.travelapp.ui.agenda.AgendaFragment"
        android:label="@string/nav_agenda"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.travelapp.ui.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_points"
        android:name="com.travelapp.ui.points.PointsOfInterestFragment"
        android:label="@string/nav_points"
        tools:layout="@layout/fragment_points" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.travelapp.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
